# computils

./: .buildinfo  .gitignore  README.md  computils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
_modules/: index.html
_modules/computils/: factory.html  fast_eval.html  finite_difference.html  gaussian_elim_spp.html  globals.html  matrix_computations.html  parallelization.html  parameter_transformations.html  performance_checking.html  sorting_algorithms.html  type_utils.html
_sources/: modules.rst.txt
docs/: computils.rst  conf.py  index.rst  requirements.txt
src/computils/: __init__.py  gaussian_elim_spp.py  globals.py  hybrid_minimizer.py  type_utils.py
