[build-system]
build-backend = "setuptools.build_meta"

[project]
name = "computils"
version = "0.0.2"
authors = [
  { name="Karim Moussa", email="research@k-moussa.com" },
]
description = "A package collecting functionality for various numerical computations (numerical differentiation, interpolation, optimization, sorting, parallelization)."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["docs/requirements.txt"]}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/k-moussa/computils"
# Issues = "https://github.com/pypa/sampleproject/issues"
